...

        device.pressHome()
        startActivityAndWait()
        device.wait(Until.hasObject(By.pkg(PACKAGE_NAME).depth(0)), 5_000)
        device.waitForIdle()

        device.findObject(By.desc("Settings"))?.click()
        device.waitForIdle()
        device.pressBack()
        device.waitForIdle()
    }

    private fun prepareAppState(context: Context, device: UiDevice) {
...
